updated some things
